--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "axios": "^0.26.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-scripts": "5.0.0",
+    "react-scrollbar": "^0.5.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
